# kirigami

./: CMakeLists.txt  KF5Kirigami2Macros.cmake
autotests/: tst_keynavigation.qml  tst_listskeynavigation.qml
examples/galleryapp/: CMakeLists.txt  resources.qrc
examples/gallerydata/contents/ui/: MainPage.qml
examples/gallerydata/contents/ui/gallery/: ColorContextGallery.qml  ColorScopeGallery.qml  ColorSetGallery.qml  ColorsGallery.qml  LayersGallery.qml  ListViewGallery.qml  ListViewHeaderItemsGallery.qml  MiscGallery.qml  MultipleColumnsGallery.qml  SliderGallery.qml
examples/minimalqmake/: kirigami-icons.qrc
examples/simpleexamples/: simpleChatApp.qml
src/: CMakeLists.txt  basictheme.cpp  basictheme.h  desktopicon.cpp  desktopicon.h  kirigamiplugin.cpp  platformtheme.cpp  platformtheme.h  theme.cpp  theme.h
src/controls/: AbstractApplicationItem.qml  AbstractApplicationWindow.qml  AbstractApplicationWindow.qmlc  ApplicationWindow.qml  BasicListItem.qml  ContextDrawer.qml  GlobalDrawer.qml  Icon.qml  ItemViewHeader.qml  OverlayDrawer.qml  OverlaySheet.qml  Page.qml  PageRow.qml  ScrollablePage.qml  Separator.qml  Theme.qml
src/controls/private/: ActionButton.qml  DefaultListItemBackground.qml  RefreshableScrollView.qml
src/controls/templates/: AbstractApplicationHeader.qml  AbstractListItem.qml  ApplicationHeader.qml  OverlayDrawer.qml  OverlaySheet.qml  SwipeListItem.qml
src/controls/templates/private/: BackButton.qml  ScrollView.qml
src/libkirigami/: CMakeLists.txt  basictheme.cpp  basictheme.h  kirigamipluginfactory.h  platformtheme.cpp  platformtheme.h  platformthemefactory.cpp  platformthemefactory.h
src/styles/Material/: AbstractListItem.qml  Theme.qml
src/styles/Plasma/: Icon.qml  Theme.qml
src/styles/org.kde.desktop/: OverlayDrawer.qml  Theme.qml
